--- a/careers/ai_engineer_associate_2_dec_25/index.html
+++ b/careers/ai_engineer_associate_2_dec_25/index.html
@@ -22,7 +22,7 @@
 
 <title>
   
-    AI Engineer Associate | Husig.ai
+    AI Engineer [Associate] | Husig.ai
   
 </title>
 
@@ -45,7 +45,7 @@
 
 <meta
   property="og:title"
-  content="AI Engineer Associate | HuSig"
+  content="AI Engineer [Associate] | HuSig"
 />
 <meta
   property="og:description"
@@ -60,7 +60,7 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta
   name="twitter:title"
-  content="AI Engineer Associate | HuSig"
+  content="AI Engineer [Associate] | HuSig"
 />
 <meta
   name="twitter:description"
@@ -369,7 +369,7 @@
   
 
 
-        <h1>AI Engineer Associate</h1>
+        <h1>AI Engineer [Associate]</h1>
 
         
         
@@ -467,7 +467,7 @@
 <li>Custom AI models for client-specific needs</li>
 </ul>
 <h2 id="how-to-apply">How to Apply</h2>
-<p>Please submit your resume to <strong>[ayush@husig.ai]</strong>:</p>
+<p>Please submit your resume to <strong>[ayush@husig.ai]</strong>. Also include your salary expectations.</p>
 <hr>
 <p><em>Last Updated: November 2025</em></p>
 
