--- a/careers/data_analysis_customer_operations_associate_3_dec_2025/index.html
+++ b/careers/data_analysis_customer_operations_associate_3_dec_2025/index.html
@@ -22,7 +22,7 @@
 
 <title>
   
-    Data Analysis &amp; Customer Operations Associate | Husig.ai
+    Data Analysis &amp; Customer Operations [Entry level/Internship] | Husig.ai
   
 </title>
 
@@ -45,7 +45,7 @@
 
 <meta
   property="og:title"
-  content="Data Analysis &amp; Customer Operations Associate | HuSig"
+  content="Data Analysis &amp; Customer Operations [Entry level/Internship] | HuSig"
 />
 <meta
   property="og:description"
@@ -60,7 +60,7 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta
   name="twitter:title"
-  content="Data Analysis &amp; Customer Operations Associate | HuSig"
+  content="Data Analysis &amp; Customer Operations [Entry level/Internship] | HuSig"
 />
 <meta
   name="twitter:description"
@@ -369,7 +369,7 @@
   
 
 
-        <h1>Data Analysis &amp; Customer Operations Associate</h1>
+        <h1>Data Analysis &amp; Customer Operations [Entry level/Internship]</h1>
 
         
         
@@ -409,7 +409,7 @@
 <h2 id="required-qualifications">Required Qualifications</h2>
 <h3 id="education--basic-skills">Education &amp; Basic Skills</h3>
 <ul>
-<li>Bachelor&rsquo;s degree in any field (business, economics, mathematics, or related fields preferred)</li>
+<li>Bachelor&rsquo;s degree in any field (business, economics, computer science, mathematics, or related fields preferred)</li>
 <li>Fresh graduates or up to 1 year of relevant experience welcome</li>
 <li>Strong interest in either data analysis OR customer communication (expertise in both not required)</li>
 <li>Basic computer literacy and willingness to learn new software systems</li>
@@ -430,36 +430,9 @@
 <li>Eagerness to learn and grow in either technical analysis or operations roles</li>
 <li>Reliable and punctual with strong work ethic</li>
 </ul>
-<h2 id="what-youll-learn--develop">What You&rsquo;ll Learn &amp; Develop</h2>
-<h3 id="data-analysis-track">Data Analysis Track</h3>
-<ul>
-<li>Advanced Excel techniques including pivot tables, data modeling, and automation</li>
-<li>Fleet management analytics and performance optimization methodologies</li>
-<li>Data visualization and dashboard creation</li>
-<li>Business intelligence concepts and KPI development</li>
-<li>Statistical analysis for operational decision-making</li>
-</ul>
-<h3 id="customer-operations-track">Customer Operations Track</h3>
-<ul>
-<li>Professional customer service and communication techniques</li>
-<li>Conflict resolution and problem-solving in transportation context</li>
-<li>Fleet operations management and driver coordination</li>
-<li>CRM systems and customer relationship management</li>
-<li>Quality assurance and service improvement processes</li>
-</ul>
-<h2 id="training--mentorship-program">Training &amp; Mentorship Program</h2>
-<ul>
-<li>Comprehensive 2-week onboarding covering Yango Fleetroom and company processes</li>
-<li>Weekly mentorship sessions with HuSig team members focused on career development</li>
-<li>Monthly skill development workshops on data analysis or customer operations</li>
-<li>Quarterly performance reviews with personalized growth planning</li>
-<li>Access to online learning resources and professional development courses</li>
-<li>Clear pathway for advancement within Drivra Mobility or HuSig ecosystem</li>
-</ul>
 <h2 id="what-we-offer">What We Offer</h2>
 <ul>
 <li>Competitive entry-level compensation with performance bonuses</li>
-<li>Health insurance coverage</li>
 <li>Learning and development budget for courses and skill building</li>
 <li>Direct mentorship from HuSig&rsquo;s experienced team members</li>
 <li>Career growth opportunities within expanding mobility sector</li>
