--- a/careers/marketing_associate_3_dec_25/index.html
+++ b/careers/marketing_associate_3_dec_25/index.html
@@ -22,7 +22,7 @@
 
 <title>
   
-    Marketing Associate | Husig.ai
+    Marketing/Lead-gen [Associate] | Husig.ai
   
 </title>
 
@@ -45,7 +45,7 @@
 
 <meta
   property="og:title"
-  content="Marketing Associate | HuSig"
+  content="Marketing/Lead-gen [Associate] | HuSig"
 />
 <meta
   property="og:description"
@@ -60,7 +60,7 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta
   name="twitter:title"
-  content="Marketing Associate | HuSig"
+  content="Marketing/Lead-gen [Associate] | HuSig"
 />
 <meta
   name="twitter:description"
@@ -369,7 +369,7 @@
   
 
 
-        <h1>Marketing Associate</h1>
+        <h1>Marketing/Lead-gen [Associate]</h1>
 
         
         
@@ -420,8 +420,6 @@
 </ul>
 <h3 id="technical-proficiencies">Technical Proficiencies</h3>
 <ul>
-<li>Advanced Excel/Google Sheets skills including formulas, pivot tables, and data analysis</li>
-<li>Experience with research tools (LinkedIn Sales Navigator, ZoomInfo, similar platforms)</li>
 <li>Basic familiarity with data collection tools and web scraping concepts</li>
 <li>Knowledge of CRM platforms and lead management systems</li>
 <li>Understanding of email marketing platforms and automation tools</li>
@@ -467,7 +465,7 @@
 <li>Collaborative environment with engineering and business development teams</li>
 </ul>
 <h2 id="how-to-apply">How to Apply</h2>
-<p>Please submit your resume along with examples of your research work, data analysis projects, or lead generation campaigns, and complete our analytical assessment to [ayush@husig.ai]</p>
+<p>Please submit your resume along with examples of your research work, data analysis projects, or lead generation campaigns, and complete our analytical assessment to [ayush@husig.ai]. Also include your salary expectations.</p>
 <hr>
 <p><em>Last Updated: December 2025</em></p>
 
