--- a/careers/data_analysis_customer_operations_associate_3_dec_2025/index.html
+++ b/careers/data_analysis_customer_operations_associate_3_dec_2025/index.html
@@ -448,7 +448,7 @@
 <li><strong>The Detail-Oriented</strong>: Take pride in accurate work and systematic approaches to tasks</li>
 </ul>
 <h2 id="how-to-apply">How to Apply</h2>
-<p>Please submit your resume and a brief cover letter explaining whether you&rsquo;re more interested in the data analysis or customer operations aspects of this role to [ayush@husig.ai]</p>
+<p>Please submit your resume to [ayush@husig.ai]</p>
 <hr>
 <p><em>Drivra Mobility is an official partner of Yango with operations oversight and career development support provided by HuSig.</em></p>
 <p><em>Last Updated: December 2025</em></p>
