--- a/careers/flutter_developer_3_dec_25/index.html
+++ b/careers/flutter_developer_3_dec_25/index.html
@@ -453,7 +453,7 @@
 <li>Modern office setup with latest development tools</li>
 </ul>
 <h2 id="how-to-apply">How to Apply</h2>
-<p>Please submit your resume along with a portfolio of your Flutter applications (App Store/Play Store links or GitHub repositories) and complete our technical coding challenge to [ayush@husig.ai]. Also include your salary expectations.</p>
+<p>Please submit your resume along with a portfolio of your Flutter applications (App Store/Play Store links or GitHub repositories) to [ayush@husig.ai]. Also include your salary expectations.</p>
 <hr>
 <p><em>Last Updated: December 2025</em></p>
 
