--- a/careers/index.html
+++ b/careers/index.html
@@ -478,7 +478,7 @@
             
             <div class="job-card">
             <div class="job-card-header">
-                <h3 class="job-title">Marketing/Lead-gen [Associate]</h3>
+                <h3 class="job-title">Marketing/Lead Generation [Associate]</h3>
                 <span class="job-type">Full-time</span>
             </div>
             <div class="job-card-body">
