--- a/careers/marketing_associate_3_dec_25/index.html
+++ b/careers/marketing_associate_3_dec_25/index.html
@@ -22,7 +22,7 @@
 
 <title>
   
-    Marketing/Lead-gen [Associate] | Husig.ai
+    Marketing/Lead Generation [Associate] | Husig.ai
   
 </title>
 
@@ -45,7 +45,7 @@
 
 <meta
   property="og:title"
-  content="Marketing/Lead-gen [Associate] | HuSig"
+  content="Marketing/Lead Generation [Associate] | HuSig"
 />
 <meta
   property="og:description"
@@ -60,7 +60,7 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta
   name="twitter:title"
-  content="Marketing/Lead-gen [Associate] | HuSig"
+  content="Marketing/Lead Generation [Associate] | HuSig"
 />
 <meta
   name="twitter:description"
@@ -369,7 +369,7 @@
   
 
 
-        <h1>Marketing/Lead-gen [Associate]</h1>
+        <h1>Marketing/Lead Generation [Associate]</h1>
 
         
         
@@ -381,22 +381,22 @@
 <h3 id="lead-research--data-collection-50">Lead Research &amp; Data Collection (50%)</h3>
 <ul>
 <li>Conduct systematic research to identify potential event organizers, venue operators, and industry stakeholders</li>
-<li>Perform manual and automated data scraping using various tools and methodologies</li>
-<li>Collaborate with software engineers to develop and optimize data collection scripts and processes</li>
-<li>Build and maintain comprehensive databases of leads with detailed contact information and business intelligence</li>
+<li>Perform manual research using various online tools and platforms to find contact information</li>
+<li>Work with technical team members to improve data collection processes and efficiency</li>
+<li>Build and maintain comprehensive databases of leads with detailed contact information and business details</li>
 <li>Research industry trends, competitor activities, and market opportunities in the events space</li>
-<li>Validate and clean datasets to ensure accuracy and completeness of lead information</li>
+<li>Verify and organize lead information to ensure accuracy and completeness</li>
 <li>Monitor social media, industry publications, and event platforms for emerging opportunities</li>
 </ul>
 <h3 id="data-analysis--forecasting-25">Data Analysis &amp; Forecasting (25%)</h3>
 <ul>
-<li>Analyze lead data to identify patterns, trends, and high-value prospects</li>
-<li>Create forecasting models to predict lead conversion potential and market opportunities</li>
-<li>Develop scoring systems to prioritize leads based on fit, timing, and conversion likelihood</li>
+<li>Analyze lead information to identify patterns, trends, and high-value prospects</li>
+<li>Create simple models to predict which leads are most likely to convert into clients</li>
+<li>Develop rating systems to prioritize leads based on quality, timing, and business potential</li>
 <li>Generate insights and reports on lead quality, market segments, and growth opportunities</li>
-<li>Track and measure the effectiveness of different lead generation channels and methods</li>
-<li>Collaborate with technical teams to implement data-driven improvements to collection processes</li>
-<li>Maintain detailed documentation of research methodologies and data sources</li>
+<li>Track and measure how well different lead generation methods are working</li>
+<li>Work with technical teams to improve data collection processes based on findings</li>
+<li>Keep detailed records of research methods and information sources</li>
 </ul>
 <h3 id="marketing-support--outreach-25">Marketing Support &amp; Outreach (25%)</h3>
 <ul>
@@ -411,19 +411,20 @@
 <h2 id="required-qualifications">Required Qualifications</h2>
 <h3 id="experience--skills">Experience &amp; Skills</h3>
 <ul>
-<li>1-3 years of experience in marketing research, lead generation, or data analysis</li>
-<li>Strong analytical skills with ability to work with large datasets and identify patterns</li>
-<li>Proficiency in research methodologies and data collection techniques</li>
-<li>Experience with CRM systems and lead management processes</li>
-<li>Basic understanding of web scraping concepts and data extraction methods</li>
+<li>0-2 years of experience in marketing research, lead generation, or business research</li>
+<li>Strong analytical skills with ability to work with information and identify patterns</li>
+<li>Proficiency in research methods and online information gathering</li>
+<li>Experience with customer relationship management and lead tracking</li>
+<li>Strong internet research skills and ability to find contact information</li>
 <li>Excellent written and verbal communication skills for outreach and reporting</li>
 </ul>
 <h3 id="technical-proficiencies">Technical Proficiencies</h3>
 <ul>
-<li>Basic familiarity with data collection tools and web scraping concepts</li>
-<li>Knowledge of CRM platforms and lead management systems</li>
-<li>Understanding of email marketing platforms and automation tools</li>
-<li>Comfortable learning new tools and collaborating with technical teams</li>
+<li>Advanced Excel/Google Sheets skills including formulas, pivot tables, and data analysis</li>
+<li>Experience with research tools (LinkedIn, Google, industry websites)</li>
+<li>Basic familiarity with online research and data organization</li>
+<li>Knowledge of email platforms and basic marketing tools</li>
+<li>Comfortable learning new software and working with technical team members</li>
 </ul>
 <h3 id="analytical--soft-skills">Analytical &amp; Soft Skills</h3>
 <ul>
@@ -437,35 +438,35 @@
 <h2 id="preferred-qualifications">Preferred Qualifications</h2>
 <ul>
 <li>Background in events, hospitality, or entertainment industry</li>
-<li>Experience with data scraping tools (BeautifulSoup, Scrapy, or similar)</li>
-<li>Knowledge of SQL for database queries and data manipulation</li>
-<li>Familiarity with marketing automation and lead nurturing processes</li>
+<li>Experience with business research and market analysis</li>
+<li>Knowledge of Excel for data organization and basic analysis</li>
+<li>Familiarity with marketing campaigns and customer outreach</li>
 <li>Understanding of events ecosystem including venues, promoters, and ticketing platforms</li>
-<li>Experience with data visualization tools (Tableau, Power BI, or similar)</li>
-<li>Basic programming skills (Python, JavaScript) for data processing tasks</li>
+<li>Experience with business reporting and presentation creation</li>
+<li>Basic understanding of business operations and sales processes</li>
 </ul>
 <h2 id="day-to-day-activities">Day-to-Day Activities</h2>
 <ul>
-<li>Research and identify 20-30 new qualified leads daily across various channels</li>
-<li>Validate and enrich existing lead data for accuracy and completeness</li>
-<li>Collaborate with engineers on data collection script optimization and troubleshooting</li>
-<li>Analyze weekly lead generation metrics and prepare performance reports</li>
-<li>Conduct competitive intelligence research and market trend analysis</li>
+<li>Research and identify 20-30 new qualified leads daily through online platforms and industry sources</li>
+<li>Verify and organize existing lead information for accuracy and completeness</li>
+<li>Work with technical team members to improve research processes and efficiency</li>
+<li>Analyze weekly lead generation results and prepare performance reports</li>
+<li>Conduct competitor research and market trend analysis</li>
 <li>Support outreach campaigns with personalized messaging and content creation</li>
-<li>Maintain comprehensive documentation of research sources and methodologies</li>
+<li>Maintain organized records of research sources and methods</li>
 </ul>
 <h2 id="what-we-offer">What We Offer</h2>
 <ul>
 <li>Competitive compensation package with performance incentives</li>
 <li>Health insurance coverage</li>
-<li>Learning and development budget for marketing and data analysis courses</li>
+<li>Learning and development budget for marketing and business research courses</li>
 <li>Opportunity to work with international SF-based technology partners</li>
 <li>Direct impact on business growth and lead generation strategy</li>
-<li>Access to premium research tools and data collection platforms</li>
-<li>Collaborative environment with engineering and business development teams</li>
+<li>Access to premium research tools and business platforms</li>
+<li>Collaborative environment with business development and technical teams</li>
 </ul>
 <h2 id="how-to-apply">How to Apply</h2>
-<p>Please submit your resume along with examples of your research work, data analysis projects, or lead generation campaigns, and complete our analytical assessment to [ayush@husig.ai]. Also include your salary expectations.</p>
+<p>Please submit your resume along with examples of your research work, data analysis projects, or lead generation campaigns to [ayush@husig.ai]. Also include your salary expectations.</p>
 <hr>
 <p><em>Last Updated: December 2025</em></p>
 
