resolve navbar # issue

--- a/careers/index.html
+++ b/careers/index.html
@@ -47,12 +47,11 @@
     <link rel="stylesheet" href="/css/homepage.css" />
     <link rel="stylesheet" href="/css/my_components.css" />
     <link rel="stylesheet" href="/css/careers.css" />
-    <link rel="stylesheet" href="/css/responsive/mobileLandscape/.css" />
     <link rel="stylesheet" href="/css/contact_us_form.css">
     <link rel="stylesheet" href="/css/responsive/mobileLandscape/homepageLandscapeResponsive.css">
     <link rel="stylesheet" href="/css/responsive/smallScreens/homepageSmallScreenResponsive.css">
     <link rel="stylesheet" href="/css/responsive/tablet/homepageTabletResponsive.css">
-
+    <script src="/js/main.js"></script>
     <style>
       .skip-link {
         position: absolute;
