--- a/careers/fullstack_engineer_3_dec_25/index.html
+++ b/careers/fullstack_engineer_3_dec_25/index.html
@@ -462,7 +462,7 @@
 <li>Collaborative environment with cross-functional teams and modern development practices</li>
 </ul>
 <h2 id="how-to-apply">How to Apply</h2>
-<p>Please submit your resume to [ayush@husig.ai] Also include your salary expectations.</p>
+<p>Please submit your resume to [careers@husig.ai] Also include your salary expectations.</p>
 <hr>
 <p><em>Last Updated: December 2025</em></p>
 
