--- a/careers/ui_ux_designer_24_dec_25/index.html
+++ b/careers/ui_ux_designer_24_dec_25/index.html
@@ -458,7 +458,7 @@
 <li>Collaborative environment with cross-functional teams</li>
 </ul>
 <h2 id="how-to-apply">How to Apply</h2>
-<p>Please submit your resume along with a comprehensive portfolio showcasing your UX design process, visual design work, user research, and impact metrics across different projects to [ayush@husig.ai]. Also include your salary expectations.</p>
+<p>Please submit your resume along with a comprehensive portfolio showcasing your UX design process, visual design work, user research, and impact metrics across different projects to [careers@husig.ai]. Also include your salary expectations.</p>
 <hr>
 <p><em>Last Updated: December 2025</em></p>
 
