--- a/husig_incog/index.html
+++ b/husig_incog/index.html
@@ -720,25 +720,27 @@
     <img src="/images/homepage/contact_us_HerO.webp" alt="contactus" />
   </div>
   <div id="right-contact">
-    <form action="https://formspree.io/f/xyyrddzy" method="POST">
+    <form id="contact-form">
       <div class="label_group">
         <label for="contact-name">Name</label>
-        <input type="text" id="contact-name" name="name" />
+        <input type="text" id="contact-name" name="name" required />
       </div>
 
       <div class="label_group">
         <label for="contact-email">Work Email</label>
-        <input type="email" id="contact-email" name="email" />
+        <input type="email" id="contact-email" name="email" required />
       </div>
 
       <div class="label_group">
         <label for="contact-message">Message</label>
-        <textarea id="contact-message" name="message"></textarea>
+        <textarea id="contact-message" name="message" required></textarea>
       </div>
 
+      <div id="form-message" style="margin: -35px 0 2px 0; height: 2rem"></div>
       <button class="husig_cta" id="contact-us-cta" type="submit">
         Contact Us
       </button>
+
     </form>
   </div>
 </section>
@@ -868,6 +870,16 @@
     </div>
   </div>
 </section>
+
+
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
+<script>
+  window.SUPABASE_URL = "https:\/\/thragknslqprylplftxf.supabase.co";
+  window.SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRocmFna25zbHFwcnlscGxmdHhmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjAyMDUyNTUsImV4cCI6MjA3NTc4MTI1NX0.rYs2mngMbpbZ4WqkB9gCHgvHni4iKTBq8UA_jg65TqM";
+</script>
+
+<script src='/js/contact-form.js'></script>
 </footer>
     
 
